refactor: address additional SonarCloud quality issues
Fixed 12+ code quality issues:

**Transactional Issues:**
- Remove @Transactional from getConfigByTenantIdOrThrow helper method
  Participates in caller's transaction, avoiding self-invocation issues

**JwtTokenProvider Improvements:**
- Add CLAIM_ROLES constant to eliminate string duplication
- Replace lambda with method reference Role::getName
- Replace Stream.collect(toList()) with Stream.toList()
- Fix duplicate implementation: getUserIdFromToken calls getUsernameFromToken
- Remove unused Collectors import

**Unused Imports Removed:**
- EmbeddedAuthControllerIT: DirtiesContext
- JwtAuthenticationFilterTest: SimpleGrantedAuthority
- CloudRegistrationServiceTest: HttpStatusCode, List
- EmbeddedUserManagementServiceTest: Pattern
- CloudSyncServiceTest: HttpStatusCode, ArrayList

All 1,179 tests passing ✅